syntax = "proto3";

package openeld.logistics.v1;

import "common/metadata/audit.proto";
import "common/metadata/source.proto";

// * Represents a motor carrier in the normalized logistics model.
message Carrier {
  string carrier_id = 1;
  string usdot_number = 2;
  optional string mc_number = 3;
  string name = 4;
  optional string main_office_address = 5;
  string home_terminal_timezone = 6;
  optional openeld.common.metadata.v1.SourceRecord source = 20;
  optional openeld.common.metadata.v1.AuditMetadata audit = 21;
}
