syntax = "proto3";

package openeld.logistics.v1;

import "common/metadata/audit.proto";
import "common/metadata/source.proto";
import "common/primitives/time.proto";
import "common/units/measurements.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "logistics/enums.proto";

// * Represents a normalized HOS violation entry.
message HosViolation {
  string code = 1;
  optional string title = 2;
  optional string description = 3;
  ViolationSeverity severity = 4;
  optional google.protobuf.Timestamp start_time = 5;
  optional google.protobuf.Timestamp end_time = 6;
  optional google.protobuf.Duration duration = 7;
}

// * Represents a driver's daily HOS summary for a single log date.
message HosDailySummary {
  string summary_id = 1;
  string driver_id = 2;
  openeld.common.primitives.v1.LocalDate log_date = 3;
  optional google.protobuf.Duration off_duty_duration = 4;
  optional google.protobuf.Duration sleeper_berth_duration = 5;
  optional google.protobuf.Duration driving_duration = 6;
  optional google.protobuf.Duration on_duty_duration = 7;
  optional openeld.common.units.v1.Distance distance = 8;
  bool is_certified = 9;
  repeated HosViolation violations = 10;
  optional openeld.common.metadata.v1.SourceRecord source = 20;
  optional openeld.common.metadata.v1.AuditMetadata audit = 21;
}
