syntax = "proto3";

package openeld.logistics.v1;

import "common/metadata/audit.proto";
import "common/metadata/source.proto";
import "common/primitives/location.proto";
import "common/units/measurements.proto";
import "google/protobuf/timestamp.proto";
import "logistics/enums.proto";

// * Represents a normalized HOS annotation or remark.
message HosAnnotation {
  string text = 1;
  optional string author_driver_id = 2;
}

// * Represents a normalized HOS event as defined by FMCSA concepts.
message HosEvent {
  string event_id = 1;
  string driver_id = 2;
  optional string vehicle_id = 3;
  google.protobuf.Timestamp event_timestamp = 4;
  optional google.protobuf.Timestamp event_end_time = 5;
  EventType event_type = 6;
  HosEventCode event_code = 7;
  DutyStatus duty_status = 8;
  optional openeld.common.primitives.v1.GeoPoint position = 9;
  optional string location_description = 10;
  optional openeld.common.units.v1.OdometerReading odometer = 11;
  optional openeld.common.units.v1.EngineHours engine_hours = 12;
  EventOrigin origin = 13;
  RecordStatus record_status = 14;
  optional HosAnnotation annotation = 15;
  bool certified = 16;
  optional string edited_by_driver_id = 17;
  uint32 sequence_number = 18;
  repeated MalfunctionCode malfunction_codes = 19;
  optional openeld.common.metadata.v1.SourceRecord source = 20;
  optional openeld.common.metadata.v1.AuditMetadata audit = 21;
}
