syntax = "proto3";

package openeld.logistics.v1;

import "common/metadata/audit.proto";
import "common/metadata/source.proto";
import "common/primitives/time.proto";

// * Identifies a trailer associated with an assignment.
message TrailerReference {
  string name = 1;
}

// * Associates a driver with a vehicle during a time range.
message VehicleAssignment {
  string assignment_id = 1;
  string driver_id = 2;
  string vehicle_id = 3;
  optional string codriver_id = 4;
  optional openeld.common.primitives.v1.TimeRange assignment_time_range = 5;
  repeated TrailerReference trailers = 6;
  optional string shipping_doc_number = 7;
  optional openeld.common.metadata.v1.SourceRecord source = 20;
  optional openeld.common.metadata.v1.AuditMetadata audit = 21;
}
